--- a/rest/pom.xml
+++ b/rest/pom.xml
@@ -19,11 +19,6 @@
 
 	<dependencies>
 		<dependency>
-			<groupId>org.springframework</groupId>
-			<artifactId>spring-webflux</artifactId>
-			<version>5.1.4.RELEASE</version>
-		</dependency>
-		<dependency>
 			<groupId>io.projectreactor.netty</groupId>
 			<artifactId>reactor-netty</artifactId>
 			<version>0.8.3.RELEASE</version>
@@ -43,6 +38,17 @@
 					<artifactId>netty-handler-proxy</artifactId>
 				</exclusion>
 			</exclusions>
+		</dependency>
+		<dependency>
+			<groupId>org.slf4j</groupId>
+			<artifactId>slf4j-jdk14</artifactId>
+			<version>1.7.25</version>
+		</dependency>
+		<dependency>
+			<groupId>com.oracle.substratevm</groupId>
+			<artifactId>svm</artifactId>
+			<version>1.0.0-rc12</version>
+			<scope>provided</scope>
 		</dependency>
 	</dependencies>
 
