Improve kotlin-reflect repro

--- a/kotlin-reflect/src/main/resources/META-INF/native-image/reflect-config.json
+++ b/kotlin-reflect/src/main/resources/META-INF/native-image/reflect-config.json
@@ -1,6 +1,9 @@
 [
   {
-    "name": "com.sample.App",
-    "allPublicMethods": true
+    "name": "kotlin.KotlinVersion",
+    "allPublicMethods": true,
+    "allDeclaredFields":true,
+    "allDeclaredMethods":true,
+    "allDeclaredConstructors":true
   }
 ]
